--- a/src/basic.html
+++ b/src/basic.html
@@ -35,11 +35,14 @@
     <!--
     <link rel="canonical" href="http://www.example.com/">
     -->
+    <link rel="stylesheet" href="css/app.css">
   </head>
   <body>
     <!-- Add your site or app content here -->
 
     <!-- Google Analytics: change UA-XXXXX-X to be your site's ID -->
+    <script src="js/vendor.js"></script>
+    <script src="js/app.js"></script>
     <script>
       (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
       (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
